# jalv

./: .clang-format  .clang-tidy  .clant.json  .git-blame-ignore-revs  .gitignore  .gitmodules  .includes.imp  .suppress.cppcheck  AUTHORS  COPYING  Doxyfile  NEWS  README  README.md  jalv.desktop.in  jalv.ttl  meson.build  meson_options.txt  net.drobilla.jalv.metainfo.xml  waf  wscript
.reuse/: dep5
doc/: jalv.1  jalv.gtk.1  jalv.gtk3.1  jalv.gtkmm.1  jalv.qt.1  jalv.qt5.1  jalv.qt6.1  meson.build
icons/: meson.build
meson/suppressions/: meson.build
meson/warnings/: meson.build
src/: any_value.c  any_value.h  atom_rdf.c  attributes.h  backend.h  comm.c  comm.h  control.c  control.h  control_backend.h  control_simple.c  dumper.c  dumper.h  features.c  features.h  frontend.h  ipc_controls.c  ipc_controls.h  jack.c  jack_impl.h  jack_internal.c  jalv.c  jalv.h  jalv_config.h  jalv_console.c  jalv_gtk.c  jalv_gtk2.c  jalv_gtkmm2.cpp  jalv_internal.h  jalv_qt.cpp  jalv_qt.hpp  jalv_qt4.cpp  jalv_qt4_meta.hpp  log.c  log.h  lv2_evbuf.c  lv2_evbuf.h  macros.h  main.c  mapper.c  (+29 more)
src/console/: .clang-tidy  jalv_console.c  parse_command.c  parse_command.h
src/gtk/: .clang-tidy  actions.c  actions.h  controls.c  controls.h  header.c  header.h  jalv_gtk.c  jalv_gtk.h  log_viewer.c  log_viewer.h  menu.c  menu.h  plugin_selector.c  suppressions.txt
src/qt/: .clang-tidy  jalv_qt.cpp  jalv_qt.hpp
src/sratom/: sratom.c  sratom.h
src/zix/: allocator.c  allocator.h  atomic.h  attributes.h  common.h  ring.c  ring.h  sem.h  shm.h  shq.h  thread.h
subprojects/: lilv.wrap  lv2.wrap  serd.wrap  sord.wrap  sratom.wrap  suil.wrap  zix.wrap
test/: meson.build
