# Copyright 2020-2023 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('checks', type: 'feature', value: 'enabled', yield: true,
       description: 'Check for platform-specific features')

option('cxx', type: 'feature', value: 'auto', yield: true,
       description: 'Build C++ programs')

option('gtk3', type: 'feature', value: 'auto', yield: true,
       description: 'Build Gtk3 GUI')

option('portaudio', type: 'feature', value: 'auto', yield: true,
       description: 'Build PortAudio driver')

option('jack', type: 'feature', value: 'auto', yield: true,
       description: 'Build JACK driver')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('man', type: 'feature', value: 'enabled', yield: true,
       description: 'Install man pages')

option('posix', type: 'feature', value: 'auto', yield: true,
       description: 'Use POSIX system facilities')

option('qt5', type: 'feature', value: 'auto', yield: true,
       description: 'Build Qt5 GUI')

option('suil', type: 'feature', value: 'auto', yield: true,
       description: 'Use suil to load plugin UIs')

option('title', type: 'string', value: 'Jalv',
       description: 'Project title')

option('tests', type: 'feature', value: 'auto', yield: true,
       description: 'Build tests')
