# Copyright 2020-2024 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('checks', type: 'feature', value: 'enabled', yield: true,
       description: 'Check for platform-specific features')

option('cxx', type: 'feature', yield: true,
       description: 'Build C++ programs')

option('gtk3', type: 'feature', yield: true,
       description: 'Build Gtk3 GUI')

option('portaudio', type: 'feature', yield: true,
       description: 'Build PortAudio driver')

option('jack', type: 'feature', yield: true,
       description: 'Build JACK driver')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('man', type: 'feature', value: 'enabled', yield: true,
       description: 'Install man pages')

option('man_html', type: 'feature', yield: true,
       description: 'Build HTML man pages')

option('posix', type: 'feature', yield: true,
       description: 'Use POSIX system facilities')

option('qt5', type: 'feature', yield: true,
       description: 'Build Qt5 GUI')

option('qt5_moc', type: 'string', yield: true,
       description: 'Path to Qt5 moc executable')

option('qt6', type: 'feature', yield: true,
       description: 'Build Qt6 GUI')

option('qt6_moc', type: 'string', yield: true,
       description: 'Path to Qt6 moc executable')

option('suil', type: 'feature', yield: true,
       description: 'Use suil to load plugin UIs')

option('title', type: 'string', value: 'Jalv',
       description: 'Project title')

option('tests', type: 'feature', yield: true,
       description: 'Build tests')
